--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
+    <title>Professional Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
 
-    <!-- Navigation -->
+    <!-- Navbar -->
     <header>
         <nav>
             <ul>
+                <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -20,46 +23,56 @@
     </header>
 
     <!-- Hero Section -->
-    <section id="hero">
-        <h1>Hello, I'm [Your Name]</h1>
-        <p>Welcome to my portfolio website. I'm a [Your Profession/Skill].</p>
+    <section id="home">
+        <h1>Hi, I'm vinothkumar R</h1>
+<img src="photo.jpg" alt="Profile photo of vinoth" class="profile-photo">
+        <p>I'm a student. I specialize in problem solving.</p>
+        <a href="#projects" class="btn">View My Work</a>
     </section>
 
     <!-- About Section -->
     <section id="about">
         <h2>About Me</h2>
-        <p>Write a brief description about yourself, your background, and what you do.</p>
+        <p>Hi, I'm Vinothkumar R, a Student specializing in web developer and a UI/UX Designer. With a passion for creating beautiful, functional, and user-centered solutions, I enjoy transforming ideas into impactful digital experiences. My skills in HTML ,CSS,JS,React js and Node Js help me bring projects to life, whether it's crafting sleek web applications or enhancing user interfaces. I’m always exploring new technologies and pushing my creativity to deliver work that not only meets goals but exceeds expectations. Let’s connect and create something amazing together!</p>
+    </section>
+
+    <!-- Skills Section -->
+    <section id="skills">
+        <h2>Skills</h2>
+        <div class="skills-list">
+            <div class="skill-item">HTML</div>
+            <div class="skill-item">CSS</div>
+            <div class="skill-item">JavaScript</div>
+            <div class="skill-item">React</div>
+            <!-- Add more skills as needed -->
+        </div>
     </section>
 
     <!-- Projects Section -->
     <section id="projects">
-        <h2>My Projects</h2>
-
-        <div class="project">
-            <h3>Project Title 1</h3>
-            <p>Brief description of the project, your role, and the technologies used.</p>
-            <a href="https://link-to-project1.com" target="_blank">View Project</a>
+        <h2>Projects</h2>
+        <div class="project-grid">
+            <div class="project">
+                <h3>calculator</h3>
+                <p>Build a basic calculator that performs simple operations (addition, subtraction, multiplication, division) with a clear interface. This project can showcase your understanding of basic arithmetic operations and DOM manipulation..</p>
+            </div>
+            <div class="project">
+                <h3>portfolio gallery</h3>
+                <p> Develop an interactive gallery to display your projects or artwork. Each item could open a modal or expand to show more details when clicked.</p>
+            </div>
+            <!-- Add more projects as needed -->
         </div>
-
-        <div class="project">
-            <h3>Project Title 2</h3>
-            <p>Brief description of the project, your role, and the technologies used.</p>
-            <a href="https://link-to-project2.com" target="_blank">View Project</a>
-        </div>
-
-        <!-- Add more projects as needed -->
     </section>
 
     <!-- Contact Section -->
     <section id="contact">
-        <h2>Contact Me</h2>
-        <p>Feel free to reach out to me at <a href="mailto:your-email@example.com">your-email@example.com</a>.</p>
-        <p>Connect with me on <a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn</a> or <a href="https://github.com/yourprofile" target="_blank">GitHub</a>.</p>
+        <h2>Contact</h2>
+        <p>If you'd like to get in touch, please email me at <a href="mailto:vkvinoth9650@gmail.com">vkvinoth9650@gmail.com</a>.</p>
     </section>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
+        <p>&copy; 2024techsoldier. All rights reserved.</p>
     </footer>
 
 </body>
