--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <section id="about">
       <h2>About Me</h2>
       <div class="about">
-        <img src="A.jpg" alt="Mahendran M">
+        <img src="Ajpg" alt="vinoth">
         <div>
           <p>Hello! I'm Vinothkumar R, a Computer Science and Engineering student at R P Sarathy Institute of Technology. I have a strong passion for coding, problem-solving, and exploring new technologies. I am always looking for opportunities to grow my skills and contribute to impactful projects.</p>
           <p>Feel free to check out my work and connect with me!</p>
