--- a/index.html
+++ b/index.html
@@ -153,16 +153,21 @@
 
     <!-- Skills Section -->
     <section id="skills">
-      <h2>Skills</h2>
+      <h2> Technical Skills</h2>
       <ul>
-        <li>Programming Languages: C, C++, Java, Python</li>
-        <li>Web Development: HTML, CSS, JavaScript, React.js</li>
-        <li>Database Management: MySQL, MongoDB</li>
-        <li>Software Development: Data Structures, Algorithms, OOP</li>
-        <li>Tools & Technologies: Git, Docker, Linux</li>
-        <li>Cloud Computing: AWS, Google Cloud</li>
-        <li>Machine Learning: Basic knowledge of ML algorithms</li>
+       <li>programming C</li>
+           <li>java</li>
+           <li>Basics in(Html,CSSand JavaScript)</li>
+           <li>Sql</li>
       </ul>
+      <h2>
+        <ul>
+          <li>Adatability
+          </li>
+             <li>Teamwork</li>
+             <li>Collaboration</li>
+        </ul>
+      </h2>
     </section>
 
     <!-- Projects Section -->
