--- a/index.html
+++ b/index.html
@@ -161,14 +161,14 @@
            <li>Basics in(Html,CSSand JavaScript)</li>
            <li>Sql</li>
       </ul>
-      <h2>
+      <h2>Soft Skills</h2>
         <ul>
           <li>Adatability
           </li>
              <li>Teamwork</li>
              <li>Collaboration</li>
         </ul>
-      </h2>
+      
     </section>
 
     <!-- Projects Section -->
