--- a/index.html
+++ b/index.html
@@ -163,8 +163,7 @@
       </ul>
       <h2>Soft Skills</h2>
         <ul>
-          <li>Adatability
-          </li>
+          <li>Adatability</li>
              <li>Teamwork</li>
              <li>Collaboration</li>
         </ul>
@@ -176,9 +175,9 @@
       <h2>Projects</h2>
       <p>Here are some of the projects I have worked on:</p>
       <ul>
-        <li><a href="https://github.com/your-github-link" target="_blank">Project 1: Web Development Portfolio</a></li>
-        <li><a href="https://github.com/your-github-link" target="_blank">Project 2: Machine Learning Model for Classification</a></li>
-        <li><a href="https://github.com/your-github-link" target="_blank">Project 3: Full-Stack Web Application (React, Node.js)</a></li>
+        <li><a href="https://vinothkumar2711.github.io/portfolio/" target="_blank">Project 1: Web Development Portfolio</a></li>
+        <li><a href="" target="_blank">Project 2: Machine Learning Model for Classification</a></li>
+        <li><a href="" target="_blank">Project 3: Full-Stack Web Application (React, Node.js)</a></li>
       </ul>
     </section>
 
