--- a/index.html
+++ b/index.html
@@ -176,8 +176,13 @@
       <p>Here are some of the projects I have worked on:</p>
       <ul>
         <li><a href="https://vinothkumar2711.github.io/portfolio/" target="_blank">Project 1: Web Development Portfolio</a></li>
-        <li><a href="" target="_blank">Project 2: Machine Learning Model for Classification</a></li>
-        <li><a href="" target="_blank">Project 3: Full-Stack Web Application (React, Node.js)</a></li>
+        <li><a href="https://vinothkumar2711.github.io/calculator/" target="_blank">Project 2:FlexiCalc</a></li>
+        <p>Technologies used: Html, CSS and JavaScript 
+Discription:
+            FlexiCalc is a tool designed to adapt seamlessly to different devices and screen sizes, offering a user-friendly experience for performing arithmetic calculations anywhere, anytime.
+Functions:
+         Addition, Subtraction, Multiplication and Division</p>
+        <li><a href="" target="_blank">Project 3:(React, Node.js)</a></li>
       </ul>
     </section>
 
