--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     <section id="projects">
       <h2>Projects</h2>
       <p>Here are some of the projects I have worked on:</p>
-      <ul>
+      <ul style="text-decoration:none;">
         <li><a href="https://vinothkumar2711.github.io/portfolio/" target="_blank">Project 1: Web Development Portfolio</a></li>
         <li><a href="https://vinothkumar2711.github.io/calculator/" target="_blank">Project 2:FlexiCalc</a></li>
         <p>Technologies used: Html, CSS and JavaScript 
@@ -182,7 +182,10 @@ Discription:
             FlexiCalc is a tool designed to adapt seamlessly to different devices and screen sizes, offering a user-friendly experience for performing arithmetic calculations anywhere, anytime.
 Functions:
          Addition, Subtraction, Multiplication and Division</p>
-        <li><a href="" target="_blank">Project 3:(React, Node.js)</a></li>
+        <li><a href="" target="_blank">Project 3:LiteStore(Vkart)</a></li>
+        <p>Technologies used: Html, CSS and JavaScript 
+Discription:
+            LiteStore is an online platform designed to make buying and selling products easy, with a clean layout, intuitive navigation, and essential features for a hassle-free shopping experience.</p>
       </ul>
     </section>
 
