--- a/index.html
+++ b/index.html
@@ -174,15 +174,15 @@
     <section id="projects">
       <h2>Projects</h2>
       <p>Here are some of the projects I have worked on:</p>
-      <ul style="text-decoration:none;">
-        <li>Project 1:<a href="https://vinothkumar2711.github.io/portfolio/" target="_blank"> Web Development Portfolio</a></li>
-        <li>Project 2:<a href="https://vinothkumar2711.github.io/calculator/" target="_blank">FlexiCalc</a></li>
+      <ul >
+        <li style="text-decoration: none;">Project 1:<a href="https://vinothkumar2711.github.io/portfolio/" target="_blank"> Web Development Portfolio</a></li>
+        <li style="text-decoration: none;">Project 2:<a href="https://vinothkumar2711.github.io/calculator/" target="_blank">FlexiCalc</a></li>
         <p>Technologies used: Html, CSS and JavaScript <br>
 Discription:<br>
             FlexiCalc is a tool designed to adapt seamlessly to different devices and screen sizes, offering a user-friendly experience for performing arithmetic calculations anywhere, anytime.
 <br>Functions:<br>
          Addition, Subtraction, Multiplication and Division</p>
-        <li>Project 3:<a href="" target="_blank">LiteStore(Vkart)</a></li>
+        <li style="text-decoration: none;">Project 3:<a href="" target="_blank">LiteStore(Vkart)</a></li>
         <p>Technologies used: Html, CSS and JavaScript <br>
 Discription:<br>
             LiteStore is an online platform designed to make buying and selling products easy, with a clean layout, intuitive navigation, and essential features for a hassle-free shopping experience.</p>
