--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <img src=vinoth.jpg alt="vinoth">
         <div>
           <p>Hello! I'm Vinothkumar R, a Computer Science and Engineering student at R P Sarathy Institute of Technology. I have a strong passion for coding, problem-solving, and exploring new technologies. I am always looking for opportunities to grow my skills and contribute to impactful projects.</p>
-          <p>Feel free to check out my work and connect with me!</p>
+          <p>Check out my work and connect with me!</p>
         </div>
       </div>
     </section>
