--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ Discription:<br>
             FlexiCalc is a tool designed to adapt seamlessly to different devices and screen sizes, offering a user-friendly experience for performing arithmetic calculations anywhere, anytime.
 <br>Functions:<br>
          Addition, Subtraction, Multiplication and Division</p>
-        <li style="text-decoration: none;">Project 3:<a href="" target="_blank">LiteStore(Vkart)</a></li>
+        <li style="text-decoration: none;">Project 3:<a href="https://vinothkumar2711.github.io/e-commerce/index.html" target="_blank">LiteStore(Vkart)</a></li>
         <p>Technologies used: Html, CSS and JavaScript <br>
 Discription:<br>
             LiteStore is an online platform designed to make buying and selling products easy, with a clean layout, intuitive navigation, and essential features for a hassle-free shopping experience.</p>
